Perkin-UAT/force-app/main/default/objects/Asset/fields/User_Licenses__c.field-meta.xml
<CustomField>
    <fullName>User_Licenses__c</fullName>
    <description>Enter the number of LW User licenses registered to the user</description>
    <label>User Licenses</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>