Perkin-UAT/force-app/main/default/objects/Asset/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>Asset location.  When assets shipping from SAP data will map from Functional Location</description>
    <label>Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>