Perkin-UAT/force-app/main/default/objects/Asset/listViews/All_Assets.listView-meta.xml
<ListView>
    <fullName>All_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Equipment_Number__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Material_Number__c</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Functional_Description__c</columns>
    <columns>Sales_Order_Number__c</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>Country_Asset__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.NAME</field>
        <operation>contains</operation>
        <value>Demo</value>
    </filters>
    <filters>
        <field>Country_Asset__c</field>
        <operation>equals</operation>
        <value>US,CA</value>
    </filters>
    <label>Demo Assets - Test</label>
    <language>en_US</language>
</ListView>