Perkin-UAT/force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Equipment_Number__c</columns>
    <columns>SAP_Equipment_ID__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Location_Detail__c</columns>
    <columns>Warranty_Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>All Assets</label>
    <language>en_US</language>
</ListView>