Perkin-UAT/force-app/main/default/objects/Asset/listViews/Asset_Test_by_Account.listView-meta.xml
<ListView>
    <fullName>Asset_Test_by_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>Product_Line_INF__c</columns>
    <columns>Contact_Country__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>SAP_Contract_Number__c</columns>
    <columns>Shipment_Date__c</columns>
    <columns>Warranty_Start_Date__c</columns>
    <columns>Warranty_Expiry_Date__c</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY_ENUM</field>
        <operation>notEqual</operation>
        <value>60-ENT</value>
    </filters>
    <filters>
        <field>ASSET.CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>CAD,USD</value>
    </filters>
    <filters>
        <field>Is_Informatics__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Product_Line_INF__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Asset Test by - Account</label>
</ListView>