Perkin-UAT/force-app/main/default/objects/Asset/listViews/Assets_created_Last_30_days.listView-meta.xml
<ListView>
    <fullName>Assets_created_Last_30_days</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Country_Asset__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>ASSET.SERIAL_NUMBER</field>
        <operation>startsWith</operation>
        <value>gx,xt</value>
    </filters>
    <filters>
        <field>Country_Asset__c</field>
        <operation>notEqual</operation>
        <value>US,CA</value>
    </filters>
    <label>GX&amp; XTAssets created Last 30 days</label>
    <language>en_US</language>
</ListView>