Perkin-UAT/force-app/main/default/objects/Asset/listViews/CLH_Assets.listView-meta.xml
<ListView>
    <fullName>CLH_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>System_ID__c</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>CLH</value>
    </filters>
    <label>CLH Assets</label>
    <language>en_US</language>
</ListView>