Perkin-UAT/force-app/main/default/objects/Asset/listViews/Created_date_this_year_and_last_y_Assets.listView-meta.xml
<ListView>
    <fullName>Created_date_this_year_and_last_y_Assets</fullName>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Country_Asset__c</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY_ENUM</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>contains</operation>
        <value>webm</value>
    </filters>
    <label>Created date this year and last y Assets</label>
    <language>en_US</language>
</ListView>