Perkin-UAT/force-app/main/default/objects/Asset/listViews/FMT_Assets_in_SFDC.listView-meta.xml
<ListView>
    <fullName>FMT_Assets_in_SFDC</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Shipment_Date__c</columns>
    <columns>Country_Asset__c</columns>
    <columns>Contact_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY_ENUM</field>
        <operation>equals</operation>
        <value>37-QTS</value>
    </filters>
    <label>FMT Assets in SFDC</label>
    <language>en_US</language>
</ListView>