Perkin-UAT/force-app/main/default/objects/Asset/listViews/kd.listView-meta.xml
<ListView>
    <fullName>kd</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY_ENUM</field>
        <operation>equals</operation>
        <value>37-QTS,46-INV</value>
    </filters>
    <label>kd-INV</label>
    <language>en_US</language>
</ListView>